--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   
-
+   <!-- Add CSS to an HTML page by linking a stylesheet -->
   <link rel="stylesheet" href="./styles/style.css">
-  <style>
 
+  <!-- Add CSS by using the <style> tag -->
+  <style>
+    
 
   </style>
 
@@ -16,6 +18,7 @@
 
 </head>
 <body >
+  <!-- The H1 below uses inline CSS -->
   <h1 style="color:blue; border: 5px solid pink; padding:25px">Welcome to CSS 101</h1>
   <div>
     <p >Pastry cotton candy caramels jelly-o lollipop lollipop. Lollipop dragée dessert powder icing. Chocolate cake oat cake candy chocolate bar tootsie roll. Croissant <span class="purple">pudding apple pie</span> chocolate bar pie. Brownie marshmallow cheesecake jujubes biscuit halvah. Jelly beans oat cake caramels caramels apple pie. Pastry gingerbread sweet fruitcake chocolate bar chocolate cake chocolate. Sugar plum candy canes halvah lollipop pastry bonbon. Halvah cotton candy sweet ice cream cupcake chupa chups lemon drops soufflé chocolate bar. Apple pie biscuit cookie pastry pastry. Chocolate topping danish candy cheesecake marzipan ice cream icing gingerbread. Powder marzipan candy candy canes biscuit caramels gummies apple pie chupa chups.</p>
