Updated main text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul>
         <li id="red-text">Using the <code> style </code> tag</li>
         <li style="color:blue;">Using inline styling</li>
-        <li class="purple">And by attaching an external style sheet</li>
+        <li class="purple" id="someID">And by attaching an external style sheet</li>
       </ul>
       Right click and view source to see how each of these are used on the line items. 
     </p>
@@ -33,7 +33,11 @@
       <p><img style="float:right" src="https://placekitten.com/250/252">Pastry cotton candy caramels jelly-o lollipop lollipop. Lollipop dragée dessert powder icing. Chocolate cake oat cake candy chocolate bar tootsie roll. Croissant <span class="purple">pudding apple pie</span> chocolate bar pie. Brownie marshmallow cheesecake jujubes biscuit halvah. Jelly beans oat cake caramels caramels apple pie. Pastry gingerbread sweet fruitcake chocolate bar chocolate cake chocolate. Sugar plum candy canes halvah lollipop pastry bonbon. Halvah cotton candy sweet ice cream cupcake chupa chups lemon drops soufflé chocolate bar. Apple pie biscuit cookie pastry pastry. Chocolate topping danish candy cheesecake marzipan ice cream icing gingerbread. Powder marzipan candy candy canes biscuit caramels gummies apple pie chupa chups.</p>
     </div>
 
-
+<div>
+  <p>
+    astry shortbread gummi bears croissant sesame snaps jelly. Cookie dragée cake dessert brownie. Donut bonbon cotton candy wafer cookie ice cream. Dessert jujubes sweet tootsie roll sweet roll. Gummies halvah cake donut fruitcake. Wafer cake carrot cake tootsie roll cupcake ice cream. Chocolate bar topping cotton candy cupcake caramels soufflé chocolate bar fruitcake. Cupcake chocolate carrot cake dragée dessert chocolate bar pie. Candy canes fruitcake pastry gummi bears donut bear claw cotton candy. Muffin chocolate danish pastry liquorice ice cream pudding cupcake jelly-o. Toffee pie liquorice chupa chups sugar plum croissant ice cream. Candy canes croissant danish jelly danish cake brownie bear claw. Caramels bonbon jelly topping fruitcake fruitcake sugar plum donut. Jelly-o gingerbread cookie jelly beans croissant cake fruitcake gummies gummies.
+  </p>
+</div>
   </div>
 </body>
 </html>
